--- a/Project_TransferWise/ViewController/Main Screen View Controller/Log In View Controller/LogInViewController.xib
+++ b/Project_TransferWise/ViewController/Main Screen View Controller/Log In View Controller/LogInViewController.xib
@@ -11,13 +11,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInViewController" customModule="Project_TransferWise" customModuleProvider="target">
             <connections>
                 <outlet property="appleButton" destination="htl-VY-fyz" id="qrk-dh-CLO"/>
-                <outlet property="emailTextfield" destination="Add-RI-wnn" id="hGh-NL-ejl"/>
                 <outlet property="eyeButton" destination="f9M-q3-B2r" id="uKq-wd-LVn"/>
                 <outlet property="faceButton" destination="4em-ED-exF" id="Vp5-e8-vcU"/>
                 <outlet property="googleButton" destination="lKg-Kx-RO1" id="nfx-67-faG"/>
-                <outlet property="lineBottomView" destination="A5P-Og-Dfl" id="2ET-SB-PnV"/>
-                <outlet property="lineTopView" destination="Dcx-gt-Vep" id="CXG-GK-kyQ"/>
                 <outlet property="logInButton" destination="tzh-JK-yOr" id="PJB-an-ewm"/>
+                <outlet property="mailLineView" destination="Dcx-gt-Vep" id="CXG-GK-kyQ"/>
+                <outlet property="mailTextfield" destination="Add-RI-wnn" id="hGh-NL-ejl"/>
+                <outlet property="passwordLineView" destination="A5P-Og-Dfl" id="2ET-SB-PnV"/>
                 <outlet property="passwordTextfield" destination="muv-Gj-saV" id="zhK-ab-uE6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -40,7 +40,7 @@
                     <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Add-RI-wnn" userLabel="Email TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Add-RI-wnn" userLabel="Email TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
                     <rect key="frame" x="20" y="169" width="374" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="AIw-fq-fwk"/>
@@ -59,7 +59,7 @@
                     <rect key="frame" x="21" y="205" width="372" height="0.66666666666665719"/>
                     <color key="backgroundColor" red="0.88627450980392153" green="0.90196078431372551" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="muv-Gj-saV" userLabel="Password TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="muv-Gj-saV" userLabel="Password TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
                     <rect key="frame" x="20" y="252.66666666666663" width="374" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="DUD-Pg-skx"/>
@@ -83,7 +83,7 @@
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A5P-Og-Dfl" userLabel="Line Bottom">
                     <rect key="frame" x="21" y="288.66666666666669" width="372" height="1"/>
-                    <color key="backgroundColor" red="0.88627450980392153" green="0.90196078431372551" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.82745098039215681" green="0.83529411764705885" blue="0.84705882352941175" alpha="0.7560199058219178" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzh-JK-yOr">
                     <rect key="frame" x="20" y="313.66666666666669" width="374" height="47"/>
