--- a/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
+++ b/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
@@ -51,7 +51,7 @@
                         <constraint firstAttribute="height" constant="2" id="2t5-Nh-gmp"/>
                     </constraints>
                 </stackView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transfer_wise_disc" translatesAutoresizingMaskIntoConstraints="NO" id="S39-45-UGI">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transfer_wise_globus" translatesAutoresizingMaskIntoConstraints="NO" id="S39-45-UGI">
                     <rect key="frame" x="133.66666666666666" y="108" width="146.99999999999997" height="147"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="147" id="CIr-cr-92I"/>
@@ -137,6 +137,6 @@
     </objects>
     <resources>
         <image name="apple_black" width="20" height="20"/>
-        <image name="transfer_wise_disc" width="113.66666412353516" height="113.66666412353516"/>
+        <image name="transfer_wise_globus" width="161.66667175292969" height="133.33332824707031"/>
     </resources>
 </document>
