--- a/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/SetUpBalance View Controller/SetUpBalanceViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/SetUpBalance View Controller/SetUpBalanceViewController.xib
@@ -32,14 +32,14 @@
                     <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="s4b-T2-e1O">
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="s4b-T2-e1O">
                     <rect key="frame" x="17" y="121.33333333333333" width="379" height="59.666666666666671"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple" translatesAutoresizingMaskIntoConstraints="NO" id="VlU-rt-2xz">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="59.666666666666664"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hold" translatesAutoresizingMaskIntoConstraints="NO" id="VlU-rt-2xz">
+                            <rect key="frame" x="0.0" y="0.0" width="29" height="59.666666666666664"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A3f-SG-jxF">
-                            <rect key="frame" x="45" y="0.0" width="334" height="59.666666666666664"/>
+                            <rect key="frame" x="44" y="0.0" width="335" height="59.666666666666664"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hold 50 + currencies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4A-0i-H5q">
                                     <rect key="frame" x="0.0" y="0.0" width="170" height="20.333333333333332"/>
@@ -57,14 +57,14 @@
                         </stackView>
                     </subviews>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3Vj-3A-Mq1">
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3Vj-3A-Mq1">
                     <rect key="frame" x="17" y="221" width="379" height="59.666666666666686"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple" translatesAutoresizingMaskIntoConstraints="NO" id="eT1-uW-JMR">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="59.666666666666664"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="change_money" translatesAutoresizingMaskIntoConstraints="NO" id="eT1-uW-JMR">
+                            <rect key="frame" x="0.0" y="0.0" width="29" height="59.666666666666664"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ng5-To-GdL">
-                            <rect key="frame" x="45" y="0.0" width="334" height="59.666666666666664"/>
+                            <rect key="frame" x="44" y="0.0" width="335" height="59.666666666666664"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive money, free of change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Alq-gI-UkH">
                                     <rect key="frame" x="0.0" y="0.0" width="248.33333333333334" height="20.333333333333332"/>
@@ -121,7 +121,8 @@
         </view>
     </objects>
     <resources>
-        <image name="apple" width="40" height="40"/>
+        <image name="change_money" width="29" height="29"/>
         <image name="close" width="20" height="20"/>
+        <image name="hold" width="29" height="29"/>
     </resources>
 </document>
