--- a/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/Add Recipient Screan View Controller/AddRecipientViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/Add Recipient Screan View Controller/AddRecipientViewController.xib
@@ -13,8 +13,8 @@
                 <outlet property="businessView" destination="EIi-ff-rP6" id="OsK-hx-sOP"/>
                 <outlet property="myselfView" destination="b4G-1d-YmH" id="UNH-1P-ypr"/>
                 <outlet property="someoneElseView" destination="KIK-oh-8Ez" id="AbC-PJ-rCT"/>
+                <outlet property="titleLabel" destination="09m-JX-jBc" id="p7a-gA-GQB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="webView" destination="H4V-O0-t0s" id="LZ8-GU-3Nl"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,7 +34,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a recipient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09m-JX-jBc">
-                    <rect key="frame" x="18" y="58" width="141.66666666666666" height="24"/>
+                    <rect key="frame" x="18" y="58" width="376" height="24"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                     <color key="textColor" red="0.18039215689999999" green="0.26274509800000001" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -180,14 +180,6 @@
                         <constraint firstAttribute="height" constant="15" id="pqE-CH-SSe"/>
                     </constraints>
                 </imageView>
-                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H4V-O0-t0s">
-                    <rect key="frame" x="97" y="390" width="220" height="128"/>
-                    <color key="backgroundColor" red="0.36078431372549019" green="0.38823529411764707" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="220" id="wer-Zv-hBU"/>
-                        <constraint firstAttribute="height" constant="128" id="x49-ge-i67"/>
-                    </constraints>
-                </webView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -209,7 +201,6 @@
                 <constraint firstItem="wpU-nc-qXs" firstAttribute="centerY" secondItem="Kgv-IV-xpt" secondAttribute="centerY" id="L0e-tN-75X"/>
                 <constraint firstItem="2Ae-4h-doE" firstAttribute="centerY" secondItem="Ftn-S8-J3X" secondAttribute="centerY" id="Oid-xm-suN"/>
                 <constraint firstItem="EIi-ff-rP6" firstAttribute="centerY" secondItem="Ftn-S8-J3X" secondAttribute="centerY" id="Onq-L3-FJB"/>
-                <constraint firstItem="H4V-O0-t0s" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="P64-G5-ff3"/>
                 <constraint firstItem="aNh-Ds-jNZ" firstAttribute="centerY" secondItem="o7v-me-c58" secondAttribute="centerY" id="PGx-cd-TRo"/>
                 <constraint firstItem="QeR-pL-UhT" firstAttribute="centerY" secondItem="Ftn-S8-J3X" secondAttribute="centerY" id="U9W-jm-ubk"/>
                 <constraint firstItem="aNh-Ds-jNZ" firstAttribute="leading" secondItem="KIK-oh-8Ez" secondAttribute="trailing" constant="19" id="UZ4-UW-rKB"/>
@@ -220,7 +211,6 @@
                 <constraint firstItem="koV-q8-QOC" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.92" id="cxy-vL-NfN"/>
                 <constraint firstItem="Ftn-S8-J3X" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="ech-CD-jTp"/>
                 <constraint firstItem="2Ae-4h-doE" firstAttribute="leading" secondItem="EIi-ff-rP6" secondAttribute="trailing" constant="19" id="ef0-g4-hqc"/>
-                <constraint firstItem="H4V-O0-t0s" firstAttribute="top" secondItem="koV-q8-QOC" secondAttribute="bottom" constant="10" id="fVm-il-Dfs"/>
                 <constraint firstItem="aNh-Ds-jNZ" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="o7v-me-c58" secondAttribute="trailing" id="gd4-zZ-jWb"/>
                 <constraint firstItem="09m-JX-jBc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="gtb-43-to8"/>
                 <constraint firstItem="Ftn-S8-J3X" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.92" id="hF5-5d-FNl"/>
@@ -236,7 +226,7 @@
                 <constraint firstItem="KIK-oh-8Ez" firstAttribute="centerY" secondItem="o7v-me-c58" secondAttribute="centerY" id="vQr-iW-Knr"/>
                 <constraint firstItem="eUx-Y8-12b" firstAttribute="top" secondItem="o7v-me-c58" secondAttribute="bottom" id="wyV-DP-EnI"/>
                 <constraint firstItem="eUx-Y8-12b" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="yVg-xt-S5G"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="09m-JX-jBc" secondAttribute="trailing" constant="272" id="z32-vU-k3n"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="09m-JX-jBc" secondAttribute="trailing" constant="20" id="z32-vU-k3n"/>
                 <constraint firstItem="cCu-Ld-Jhi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="zIt-Si-MPc"/>
             </constraints>
             <point key="canvasLocation" x="140.57971014492756" y="134.5108695652174"/>
