--- a/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
@@ -59,6 +59,9 @@
                     <state key="normal" title="Price comparison">
                         <color key="titleColor" red="0.0" green="0.72549019609999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="priceComparison:" destination="-1" eventType="touchUpInside" id="JHZ-nY-jLs"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZQ-MW-lJP" userLabel="Top View">
                     <rect key="frame" x="15" y="87" width="384" height="83.333333333333314"/>
